--- a/src/styles.css
+++ b/src/styles.css
@@ -74,3 +74,21 @@ header > nav > button {
   font-style: italic; 
 }
 
+#about-div {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
+  margin-top: 3rem; 
+}
+
+#about-image {
+  height: 10rem; 
+  width: 10rem; 
+  margin-bottom: 1rem; 
+}
+
+#about-description {
+  width: 30rem;   
+  text-align: center; 
+}
